phase 1 and 2
